--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -18,7 +18,7 @@ The following part extracts all the tags from your posts and sort tags,
 
 <!--
 =======================
-The following part removes dulpicated tags and invalid tags like blank tag.
+The following part removes duplicated tags and invalid tags like blank tag.
 =======================
 -->
 {% assign tags = "" %}
