--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -1,7 +1,8 @@
----
-layout: default
----
-
+###
+layout: page # This template inherits from my basic page template
+###
+<!-- We're going to give each page a tag when we create it.
+This will be the title -->
 <h1>{{ page.tag | capitalize }}</h1>
 
 <ul>
