--- a/_layouts/archiveitems.html
+++ b/_layouts/archiveitems.html
@@ -10,7 +10,7 @@ permalink: "/archiveitems"
 {% assign pages_list = docs %}
 {% for item in site.archiveitems %}
 {% if item.shortdesc != null %}
-{% include itembox.html %}
+{% include archiveitembox.html %}
 {% endif %}
 {% endfor %}
 </div>    
