--- a/_layouts/item.html
+++ b/_layouts/item.html
@@ -27,7 +27,7 @@ permalink: "/items"
 			</div>
 			<p>Contributed by {{ page.itemcontributor }}
 			<!-- Post Tags and Categories -->
-			<ul class="tags">
+			<!-- ><ul class="tags">
 				{% assign sortedCategories = page.categories | sort %}
 					{% for category in sortedCategories %}
 					<li>                        
@@ -39,7 +39,7 @@ permalink: "/items"
 				 <a class="smoothscroll" href="{{site.baseurl}}/tags#{{ tag | replace: " ","-" }}">{{ tag }}</a>
 				</li>
 				{% endfor %}
-			</ul>
+			</ul>-->
 			<!-- End Tags and Categories -->
 		</div>
 
