--- a/_layouts/itemprint.html
+++ b/_layouts/itemprint.html
@@ -30,18 +30,6 @@ permalink: "/itemprint"
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
     
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-
-<style>
-{
-  margin: 0px;
-  padding: 0px;
-  width: 670px; /* width: 7in; */
-  height: 900px; /* or height: 9.5in; */
-  clear: both;
-  background-color: gray;
-  page-break-after: always;
-}
-</style>
     
 {% if item.itemid %}
 <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/"/>
@@ -72,55 +60,15 @@ ga('send', 'pageview');
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{layout}}">
 
-    
-<div class="container">
-	<div class="row">
-        
-		<div class="col-md-9 flex-first flex-md-unordered">
-			<div class="mainheading">
 
-			<!-- Post Title -->
-			<div class="section-title col-md-12 mt-4" style="padding-left: 0;">
-			<h1 class="posttitle">{{ page.title }}</h1>
-			</div>
+
+<!-- Begin Article
+================================================== -->
+		<table cellpadding=10px><tr><td width="25%" valign="top">
+				<h1 class="posttitle">{{ page.title }}</h1>
 			<p>Contributed by {{ page.itemcontributor }}
-			<!-- Post Tags and Categories -->
-			<!-- ><ul class="tags">
-				{% assign sortedCategories = page.categories | sort %}
-					{% for category in sortedCategories %}
-					<li>                        
-					 <a class="smoothscroll" href="{{site.baseurl}}/groups#{{ category | replace: " ","-" }}">{{ category }} artifacts</a>
-					</li>
-					{% endfor %}
-				{% for tag in page.tags %}
-				<li>                        
-				 <a class="smoothscroll" href="{{site.baseurl}}/tags#{{ tag | replace: " ","-" }}">{{ tag }}</a>
-				</li>
-				{% endfor %}
-			</ul>-->
-			<!-- End Tags and Categories -->
-		</div>
-
-			<!-- Post Featured Image -->
-			{% if page.itemphoto %}<img class="featured-image img-fluid" src="{{ page.itemphoto }}" alt="{{ page.title }}">
-			{%if page.imagecredit %}{{ page.imagecredit }}{% endif %}
-			{% elsif page.itemid %}{% capture ItemImagePath %}/assets/items/{{ page.itemid }}{% endcapture %}{% for static_file in site.static_files %}{% if static_file.path contains ItemImagePath %}{% unless static_file.path contains '_th' %}<img class="featured-image img-fluid" src="{{ site.baseurl }}{{ static_file.path }}" alt="{{ page.title }}">{% endunless %}{% endif %}{% endfor %}{% endif %}
-			<!-- End Featured Image -->
-
-			<!-- Post Content -->
-			<div class="article-post">
-				<h4 id="about-this-object">About this object</h4>
-					{{ page.itemabout | markdownify }}
-
-				{%if page.itemquote %}<h4 id="why-this-object-matters"> Why this object matters</h4>
-					<blockquote>{{ page.itemquote | markdownify }}</blockquote>{% endif %}
-			</div>
-
-
-			<div class="element-set">
-
-				<div class="section-title col-md-12 mt-4" style="padding-left: 0;">
-				<h2 id="Dublin Core"><span class="text-capitalize">Dublin Core</span></h2>
+			
+			<h2 id="Dublin Core"><span class="text-capitalize">Dublin Core</span></h2>
 				</div>
 				{%if page.itemarchive %}
 				<h4>Originating Archive Object</h4>
@@ -156,91 +104,40 @@ ga('send', 'pageview');
 					</div><!-- end element -->
 			</div><!-- end element-set -->
 
-                        
-            <!-- End Categories -->
+		</td>
+		<td width="70%"><div class="section-title col-md-12 mt-4" style="padding-left: 0;">
+			<!-- Post Tags and Categories -->
+			<!-- ><ul class="tags">
+				{% assign sortedCategories = page.categories | sort %}
+					{% for category in sortedCategories %}
+					<li>                        
+					 <a class="smoothscroll" href="{{site.baseurl}}/groups#{{ category | replace: " ","-" }}">{{ category }} artifacts</a>
+					</li>
+					{% endfor %}
+				{% for tag in page.tags %}
+				<li>                        
+				 <a class="smoothscroll" href="{{site.baseurl}}/tags#{{ tag | replace: " ","-" }}">{{ tag }}</a>
+				</li>
+				{% endfor %}
+			</ul>-->
+			<!-- End Tags and Categories -->
 
-		</div>
-		<!-- End Post -->
+			<!-- Post Featured Image -->
+			{% if page.itemphoto %}<img width="70%" class="featured-image img-fluid" src="{{ page.itemphoto }}" alt="{{ page.title }}">
+			{%if page.imagecredit %}{{ page.imagecredit }}{% endif %}
+			{% elsif page.itemid %}{% capture ItemImagePath %}/assets/items/{{ page.itemid }}{% endcapture %}{% for static_file in site.static_files %}{% if static_file.path contains ItemImagePath %}{% unless static_file.path contains '_th' %}<img class="featured-image img-fluid" src="{{ site.baseurl }}{{ static_file.path }}" alt="{{ page.title }}">{% endunless %}{% endif %}{% endfor %}{% endif %}
+			<!-- End Featured Image -->
 
-	</div>
-</div>
-<!-- End Article
+			<!-- Post Content -->
+			<div class="article-post">
+				<h4 id="about-this-object">About this object</h4>
+					{{ page.itemabout | markdownify }}
+
+				{%if page.itemquote %}<h4 id="why-this-object-matters"> Why this object matters</h4>
+					<blockquote>{{ page.itemquote | markdownify }}</blockquote>{% endif %}
+			</div>
+</td></tr></table><!-- End Article
 ================================================== -->
 
-
-</div>
-
-{% if site.mailchimp-list %}
-<!-- Bottom Alert Bar
-================================================== -->
-<div class="alertbar">
-	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-            <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-            <input type="submit" value="Subscribe" name="subscribe" class="heart">
-            </div>
-        </form>
-	</div>
-</div>    
-{% endif %}
-    
-</div><!-- /.container>
-    
-<!-- Categories Jumbotron
-================================================== -->
-<div class="jumbotron fortags">
-	<div class="d-md-flex h-100">
-		<div class="col-md-4 transpdark align-self-center text-center h-100">
-            <div class="d-md-flex align-items-center justify-content-center h-100">
-                <h2 class="d-md-block align-self-center py-1 font-weight-light">Explore <span class="d-none d-md-inline">→</span></h2>
-            </div>
-		</div>
-		<div class="col-md-8 p-5 align-self-center text-center">      
-
- 			<a href="{{ site.baseurl }}/items">IUB History Harvest Artifacts</a>
-            <a href="{{ site.baseurl }}/archiveitems">Related Museum & Archival Objects</a>
-		</div>
-	</div>
-</div>
- 
-
-
-<!-- Begin Footer
-================================================== -->
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
-                  {{ site.time | date: "%Y" }} {{ site.name }} 
-            </div>
-            <div class="col-md-6 col-sm-6 text-center text-lg-right">    
-                <a target="_blank" href="https://www.wowthemes.net/mediumish-free-jekyll-template/">Mediumish Jekyll Theme</a> by WowThemes.net
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- End Footer
-================================================== -->
-
-   
-</div> <!-- /.site-content -->
-
-<!-- Scripts
-================================================== -->
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    
-<script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
-
-<script src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script> 
-    
-<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
-    
-</body>
+  </body>
 </html>
-  
