Item page layout changes

--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,7 +7,17 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ site.baseurl }}{{ item.url }}">
-                            <span class="thumbnail d-block" style="background-image:url({{ site.baseurl }}/assets/items/{{ item.itemid }}.jpg);">
+			{% if item.itemphoto %}
+				<span class="thumbnail d-block" style="background-image:url({{ item.itemphoto }});">
+			{% elsif item.itemid %}
+				{% capture ItemImagePath %}assets/items/{{ item.itemid }}_th{% endcapture %}
+				{% for static_file in site.static_files %}
+					{% if static_file.path contains ItemImagePath %}
+						<span class="thumbnail d-block" style="background-image:url({{ site.baseurl }}{{ static_file.path }});">
+					{% endif %}
+				{% endfor %}
+			{% endif %}
+
                             </span>
                         </a>
                     </div>
