--- a/_layouts/itemprint.html
+++ b/_layouts/itemprint.html
@@ -7,6 +7,8 @@ permalink: "/itemprint"
 ================================================== -->
 
 
+<base href="http://127.0.0.1:4000/items/">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -106,36 +108,35 @@ ga('send', 'pageview');
 ================================================== -->
 <table>
 	<tr><td width=938 height=1260 cellpadding=10px align=center valign=top>
-	<h1 class="btn follow" style="font-size: 5ex; width:938px">{{ page.title }}</h1>
+	<h1 class="btn follow" style="font-size: 5ex; width:938px; background: #1C9963; color: #ffffff; font-weight: bold; letter-spacing: 0.05em;">{{ page.title }}</h1>
 		<table><tr><td width="25%" valign="top">
 			
-			<h2 id="Dublin Core"><span class="text-capitalize">Dublin Core</span></h2>
-				</div>
+				<h4>About this object</h4>
+							{{ page.itemabout | markdownify | replace: "<p>", "<p style='margin-left:12px; font-size:115%'>"}}
+
 				{%if page.itemarchive %}
 				<h4>Originating Archive Object</h4>
 				{%if page.archiveurl %}<a href="{{ page.archiveurl }}">{% endif %}<p style="margin-left:12px">{{ page.itemarchive}}{%if page.itemid %} {{ page.itemid}}{% endif %}</p>{%if page.archiveurl %}</a>{% endif %}
 				{% endif %}
-					<h4>Title</h4>
-					{%if page.itemurl %}<a href="{{ page.itemurl }}">{% endif %}<p style="margin-left:12px">{{ page.title }}</p>{%if page.itemurl %}</a>{% endif %}
-					</div><!-- end element -->
-				<h4>Subject</h4>
+				<table width="100%" bgcolor="efefef">
+					<tr><td><h4 style="font-size: 1rem;">Subject</h4>
 							<p style="margin-left:12px">{{ page.itemsubject }}</p>
-				<h4>Description</h4>
+				<h4 style="font-size: 1rem;">Description</h4>
 							<p style="margin-left:12px">{{ page.shortdesc }}</p>
-				<h4>Creator</h4>
+				<h4 style="font-size: 1rem;">Creator</h4>
 							<p style="margin-left:12px">{{ page.itemcreator }}</p>
-				<h4>Contributor</h4>
+				<h4 style="font-size: 1rem;">Contributor</h4>
 							<p style="margin-left:12px">{{ page.itemcontributor }}</pp>
-				<h4>Date</h4>
+				<h4 style="font-size: 1rem;">Date</h4>
 							<p style="margin-left:12px">{{ page.itemdate }}</p>
-				<h4>Type</h4>
+				<h4 style="font-size: 1rem;">Type</h4>
 							<p style="margin-left:12px">{{ page.itemtype }}</p>
-				<h4>About this object</h4>
-							{{ page.itemabout | markdownify | replace: "<p>", "<p style='margin-left:12px'>"}}
+				</td></tr></table>
 
 			</div><!-- end element-set -->
 		</td>
-		<td width="70%">
+		<td width="1%">&nbsp;</td>
+		<td width="70%" valign=top>
 
 			<!-- Post Featured Image -->
 			{% if page.itemphoto %}<img width="70%" class="featured-image img-fluid" src="{{ page.itemphoto }}" alt="{{ page.title }}">
@@ -146,11 +147,33 @@ ga('send', 'pageview');
 			<!-- Post Content -->
 			<div class="article-post">
 				{%if page.itemquote %}<h4 id="why-this-object-matters"> Why this object matters</h4>
-					{{ page.itemquote | markdownify | replace: "<p>", "<p class=blockquote>"}}{% endif %}
+					{{ page.itemquote | markdownify | replace: "<p>", "<p class=blockquote style='font-size:115%;'>"}}{% endif %}
 			</div>
 </td></tr></table>
 					<!-- Post Tags and Categories -->
-					<ul style="margin-left: -30px; line-height:200%;">
+					<table width="100%" bgcolor="efefef">
+					<tr>
+					<td width="50%" valign=top>
+									{%if page.itemarchive %}
+				<h4>Originating Archive Object</h4>
+				{%if page.archiveurl %}<a href="{{ page.archiveurl }}">{% endif %}<p style="margin-left:12px">{{ page.itemarchive}}{%if page.itemid %} {{ page.itemid}}{% endif %}</p>{%if page.archiveurl %}</a>{% endif %}
+				{% endif %}
+				<h4 style="font-size: 1rem;">Subject</h4>
+							<p style="margin-left:12px">{{ page.itemsubject }}</p>
+				<h4 style="font-size: 1rem;">Description</h4>
+							<p style="margin-left:12px">{{ page.shortdesc }}</p>
+				<h4 style="font-size: 1rem;">Creator</h4>
+							<p style="margin-left:12px">{{ page.itemcreator }}</p>
+				</td><td width="1%">&nbsp;</td><td width="1%" style="border-right: 1px solid #bcbcbc;">&nbsp;</td><td width="1%">&nbsp;</td><td width="50%" valign=top>
+				<h4 style="font-size: 1rem;">Contributor</h4>
+							<p style="margin-left:12px">{{ page.itemcontributor }}</pp>
+				<h4 style="font-size: 1rem;">Date</h4>
+							<p style="margin-left:12px">{{ page.itemdate }}</p>
+				<h4 style="font-size: 1rem;">Type</h4>
+							<p style="margin-left:12px">{{ page.itemtype }}</p>
+
+					</td></tr></table>
+					<ul style="margin-top:15px; margin-left: -30px; line-height:200%;">
 						{% assign sortedCategories = page.categories | sort %}
 							{% for category in sortedCategories %}
 							<a class="btn follow" href="">                        
