--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
 }
 
 .blockquote {
-border-left: 4px solid ##7A1705;
+border-left: 4px solid #7A1705;
 padding: 0 20px;
 font-style: italic;
 color: rgba(0,0,0,.5);
